--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
         <!-- Icon Page -->
-        
+        <link rel="icon" href="C:\Users\folte\Desktop\Imagens/rocket-coffee.jpg">
     </head>
 
     <body>
