--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
         <!-- Icon Page -->
-        <link rel="icon" href="C:\Users\folte\Desktop\Imagens/rocket-coffee.jpg">
+        <link rel="icon" href="C:\Users\folte\Desktop\Projeto Maratona/rocket-coffee.jpg">
     </head>
 
     <body>
@@ -40,7 +40,7 @@
     </header>
 
     <section>
-        <h2>Brunch</h2>
+        <h2 class="produtos">Brunch <img class="icon" src="icons8-american-pancakes-64.png" alt=""> </h2>
 
         <ul>
             <li>
@@ -91,7 +91,7 @@
     </section>
 
     <section>
-        <h2>Bebidas</h2>
+        <h2>Bebidas <img class="icon" src="icons8-chocolate-quente-64.png" alt=""></h2>
 
         <ul>
             <li>
