--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
         <!-- Icon Page -->
-        <link rel="icon" href="./assets/favicon.ico">
+        <link rel="icon" href="./favicon.ico">
     </head>
 
     <body>
@@ -131,7 +131,7 @@
                     <p class="description">
                         Feito por água, amônia e metano, este chá é especial 
                         para aqueles que querem ter um dia tranquilo e sem estresse, 
-                        sua cor azulada é por causa da quantidade de metano que vai no chá rs. 
+                        sua cor azulada é por causa da quantidade de metano que vai no chá. 
                     </p>
                 </div>
 
