--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     <p class="description">
                         Feito por água, amônia e metano, este chá é especial 
                         para aqueles que querem ter um dia tranquilo e sem estresse, 
-                        sua cor azulada é por causa da quantidade de metano que vai no chá rs. 
+                        sua cor azulada é por causa da quantidade de metano que vai no chá. 
                     </p>
                 </div>
 
