--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <!-- HEADER P-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Slabo+27px&display=swap" rel="stylesheet">
+        <link href="https: //fonts.googleapis.com/css2? family= Open+Sans:wght@300 & display=swap" rel="stylesheet">
         <!-- Icon Page -->
-        <link rel="icon" href="./favicon.ico">
+        <link rel="icon" href="./assets/favicon.ico">
     </head>
 
     <body>
@@ -23,13 +23,13 @@
     <header> 
         <h1>Rocket<span>Coffee</span></h1>
         <p>
-            Aberto todos os dias. 8h-23h <br> (Exceto quando passamos pela Crosta Terrestre)
+            Aberto todos os dias. 8h-23h 
         </p> 
     </header>
 
     <section>
-        <h2 class="produtos">Brunch <img class="icones" src="icons8-american-pancakes-64.png" alt=""> </h2>
-
+        <h2 class="produtos">Brunch <img class="icones" src="assets/icons8-american-pancakes-64.png" alt=""> </h2>
+        
         <ul>
             <li>
                 <div class="details">
@@ -79,17 +79,14 @@
     </section>
 
     <section>
-        <h2>Bebidas <img class="icones" src="icons8-chocolate-quente-64.png" alt=""></h2>
+        <h2>Bebidas <img class="icones" src="assets/icons8-chocolate-quente-64.png" alt=""></h2>
 
         <ul>
             <li>
                 <div class="details">
                     <h3>Suco de Urano</h3>
                     <p class="description">
-                        Um suquinho mais que especial, recheado de ferro e niquel 
-                        acompanha um manto de gelo para te manter longe do calor, e 
-                        no meio você sentirá um gostinho de atmosfera de hidrogênio 
-                        com uma pitada de hélio. 
+                        Um suquinho mais que especial, recheado de ferro e niquel, acompanha um manto de gelo para te manter longe do calor, e no meio você sentirá um gostinho de atmosfera de hidrogênio com uma pitada de hélio. 
                     </p>
                 </div>
 
@@ -102,8 +99,7 @@
                 <div class="details">
                     <h3>Frappuccino de Saturno</h3>
                     <p class="description">
-                        Delicioso Frapp com um toque de pedritas especiais, 
-                        acompanha anéis de gelo para dar um visual mais charmoso. 
+                        Delicioso Frapp com um toque de pedritas especiais, acompanha anéis de gelo para dar um visual mais charmoso. 
                         
                     </p>
                 </div>
@@ -116,10 +112,7 @@
             <li>
                 <div class="details">
                     <h3>Chá de Netuno</h3>
-                    <p class="description">
-                        Feito por água, amônia e metano, este chá é especial 
-                        para aqueles que querem ter um dia tranquilo e sem estresse, 
-                        sua cor azulada é por causa da quantidade de metano que vai no chá. 
+                    <p class="description"> Feito por água, amônia e metano, este chá é especial para aqueles que querem ter um dia tranquilo e sem estresse, sua cor azulada é por causa da quantidade de metano que vai no chá.
                     </p>
                 </div>
 
