--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https: //fonts.googleapis.com/css2? family= Open+Sans:wght@300 & display=swap" rel="stylesheet">
+        <!-- SECTION P -->
+        
         <!-- Icon Page -->
-        <link rel="icon" href="./assets/favicon.ico">
+        <link rel="icon" href="./favicon.ico">
     </head>
 
     <body>
@@ -28,7 +30,7 @@
     </header>
 
     <section>
-        <h2 class="produtos">Brunch <img class="icones" src="assets/icons8-american-pancakes-64.png" alt=""> </h2>
+        <h2 class="produtos">Brunch <img class="icones" src="./icons8-american-pancakes-64.png" alt=""> </h2>
         
         <ul>
             <li>
@@ -79,7 +81,7 @@
     </section>
 
     <section>
-        <h2>Bebidas <img class="icones" src="assets/icons8-chocolate-quente-64.png" alt=""></h2>
+        <h2>Bebidas <img class="icones" src="./icons8-chocolate-quente-64.png" alt=""></h2>
 
         <ul>
             <li>
